@@ -2,3 +2,5 @@
  * Better handle exceptions in utils.download_file
  * Added support for variations in intelligent components (ic)
  * Fixed bugs in IC
+ * Added "_" prefix in tags to specify variation of IC
+ * Record env.sh in "installed artifacts even if bat file is not executed
